[package]
name = "pcm-flow"
version = "0.4.0"
authors = ["sebastian pfluegelmeier"]
license = "LGPL-3.0"
repository = "https://github.com/sebastianpfluegelmeier/pcm-flow"
description = "Compose many small audio Processors to a big audio Processor"
readme = "README.md"
keywords = ["audio", "modular", "dsp", "synthesizer"]

[lib]
name = "pcm_flow"
path = "./src/lib.rs"

[dependencies]
sample = "0.9.0"
petgraph = "0.4.10"
